# miniworlds

./: .gitignore  .gitmodules  DEVELOP.md  Dockerfile  ERROR_MESSAGES_AUDIT.md  ERROR_MESSAGES_EXAMPLES.md  README.md  conftest.py  instructions.md  justfile  prepare.sh  pytest.ini  requirements.txt  tasks.py  test_error_messages.py
.github/: copilot-instructions.md
docs/: makeenglish.sh  makegerman.sh
libraries/miniworlds_robot/: README.md  pyproject.toml
libraries/miniworlds_robot/examples/: 01_sequence.py  02_variables.py  03_functions.py  04_loops.py  05_conditions.py  README.md
libraries/miniworlds_robot/solutions/: 01_sequence.py  02_variables.py  03_functions.py  04_loops.py  05_conditions.py
libraries/miniworlds_robot/source/miniworlds_robot/: __init__.py  config.py  loader.py  robot.py  tasks.py  world.py
libraries/miniworlds_robot/test/: test_examples.py  test_robot_library.py
libraries/miniworlds_turtle/: README.md  pyproject.toml
libraries/miniworlds_turtle/source/miniworlds_turtle/: __init__.py  colors.py  geometry.py  screen.py  turtle.py
libraries/miniworlds_turtle/test/: test_api_surface.py  test_turtle_core.py
source/: CHANGELOG.md  setup.py
test/: conftest.py  test_000_template.py  test_102_costumes_and_backgrounds.py  test_103_costumes_and_backgrounds_with_images.py  test_104_image_loading.py  test_105_placing_on_pixelboard.py  test_107_size_pixelboard.py  test_108_position_topleft.py  test_109_direction_and_orientation.py  test_1101_background_to_array.py  test_110_costume_and_orientation.py  test_112_text_token.py  (+89 more)
(+654 files in other folders)
